# mRustSC

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: backed_transform.py  benchmark.py  streaming.py
crates/scrust-core/: Cargo.toml
crates/scrust-core/src/: autocorrelation.rs  batch.rs  chunked.rs  cluster.rs  device.rs  diffusion.rs  error.rs  harmony.rs  layout.rs  lib.rs  neighbors.rs  paga.rs  pca.rs  qc.rs  sampling.rs  scoring.rs  sparse.rs  tsne.rs  umap.rs
crates/scrust-core/src/de/: dispersion.rs  glm.rs  hypothesis.rs  mod.rs  multiple_testing.rs  parametric.rs  wilcoxon.rs
crates/scrust-core/src/preprocess/: filter.rs  hvg.rs  mod.rs  normalize.rs  scale.rs
crates/scrust-gpu/: Cargo.toml
crates/scrust-gpu/src/: context.rs  lib.rs
crates/scrust-gpu/src/kernels/: knn.rs  mod.rs  spmm.rs  tsne_gradient.rs  umap_sgd.rs
crates/scrust-py/: Cargo.toml
crates/scrust-py/src/: batch.rs  cluster.rs  convert.rs  de.rs  diffusion.rs  embedding.rs  layout.rs  lib.rs  metrics.rs  paga.rs  parametric.rs  preprocess.rs  qc.rs  sampling.rs  scoring.rs
docs/: API.md  API_CONTRACT.md  ARCHITECTURE.md  BENCHMARKS.md  HOW_IT_WORKS.md  INSTALL.md  VALIDATION.md
docs/tutorials/: pbmc3k_clustering.ipynb  pbmc3k_clustering.py
examples/: pbmc3k.py
python/scrust/: __init__.py  _backed.py  _shared.py  pl.py  pp.py  settings.py  tl.py
python/scrust/get/: __init__.py  _frames.py
python/scrust/metrics/: __init__.py  _autocorrelation.py  _compare.py
python/scrust/pp/: __init__.py  _basics.py  _batch.py  _harmony.py  _qc.py  _sampling.py
python/scrust/tl/: __init__.py  _cluster.py  _de.py  _dpt_branching.py  _embedding.py  _layout.py  _score.py  _trajectory.py
scripts/: benchmark.py  validate_pbmc.py
src/mlxde/: __init__.py  contracts.py  factory.py
src/mlxde/backend/: __init__.py  mlx_backend.py  numpy_backend.py  registry.py
src/mlxde/cli/: main.py
src/mlxde/io/: design.py  pseudobulk.py  readers.py  writers.py
src/mlxde/pipeline/: differential_expression.py
src/mlxde/preprocess/: filtering.py  normalization.py
src/mlxde/report/: plots.py  summary.py
src/mlxde/stats/: dispersion.py  glm.py  hypothesis.py  multiple_testing.py
tests/: conftest.py  reference_metrics.py  scrust_call.py  test_accessors.py  test_backed.py  test_backed_streaming.py  test_backend_mlx.py  test_batch.py  test_batch_audit.py  test_cell_cycle_audit.py  test_chunked_audit.py  test_cli.py  test_cluster.py  test_cluster_audit.py  test_contracts.py  test_de_audit.py  test_de_methods.py  test_destats_audit.py  test_device_parity.py  test_diffusion.py  test_diffusion_audit.py  test_dispersion.py  test_dpt_branching_audit.py  test_end_to_end.py  test_glm.py  test_harmony_audit.py  test_hypothesis.py  test_io.py  test_layout.py  test_layout_audit.py  test_metrics.py  test_multiple_testing.py  test_neighbors_audit.py  test_packaging.py  test_paga.py  test_paga_audit.py  test_parametric_audit.py  test_pca_audit.py  test_pipeline.py  test_preprocess.py  (+16 more)
