[workspace]
resolver = "2"
members = ["crates/scrust-core", "crates/scrust-gpu", "crates/scrust-py"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
scrust-core = { path = "crates/scrust-core" }
scrust-gpu = { path = "crates/scrust-gpu" }
candle-core = { version = "0.9", features = ["metal"] }
metal = "0.29"
ndarray = "0.16"
rand = "0.8"
rayon = "1.10"
thiserror = "2.0"
# Optional Apple Accelerate (vecLib) BLAS/LAPACK for dense linear algebra on macOS ARM64.
# Off by default so the pure-Rust build stays cross-platform (Linux/CI); the `accelerate`
# feature on each crate links it. Never used for the sparse CSR paths.
blas-src = { version = "0.10", features = ["accelerate"] }

[profile.release]
lto = "thin"
codegen-units = 1
