[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxde"
version = "0.1.0"
description = "GPU-accelerated differential expression analysis for Apple silicon"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "typer>=0.12",
]

[project.optional-dependencies]
gpu = ["mlx>=0.20"]
plots = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
mlxde = "mlxde.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Tests are plain functions; this stops pytest collecting domain types such as
# TestStatistics purely because of their name.
python_classes = []
