[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scrust"
version = "0.1.0"
description = "Single-cell analysis with a Rust core on the Apple GPU"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "anndata>=0.10", "scipy>=1.13"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
reference = ["scanpy>=1.10", "leidenalg>=0.10"]

[tool.maturin]
module-name = "scrust._scrust"
python-source = "python"
manifest-path = "crates/scrust-py/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
python_classes = []
markers = [
    "reference: cross-checks results against scanpy; downloads datasets",
]
