[package]
name = "scrust-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_scrust"
crate-type = ["cdylib"]

[dependencies]
scrust-core.workspace = true
# No scrust-gpu: nothing here calls it. The hand-written Metal kernels are not on any
# path reachable from Python, so depending on the crate only lengthened the build and
# suggested otherwise. GPU work that does reach Python goes through candle, which
# `scrust-core` drives from the `Device` each binding resolves.
candle-core.workspace = true
ndarray.workspace = true
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module"] }
