[package]
name = "scrust-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_scrust"
crate-type = ["cdylib"]

[dependencies]
scrust-core.workspace = true
# SPIKE (feature/multiagent-gpu-spike): scrust-gpu is wired in behind a device check so
# a Metal caller reaches the hand-written `knn_metal` kernel instead of the candle path.
# The dispatch lives in `embedding.rs`; the CPU path is unchanged. See the branch report
# for the overhead measurement that decides whether this stays.
scrust-gpu.workspace = true
candle-core.workspace = true
ndarray.workspace = true
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module"] }

[features]
# `maturin develop --features accelerate` builds the extension with Apple Accelerate BLAS
# behind the dense linear algebra; the default wheel stays pure-Rust and portable.
accelerate = ["scrust-core/accelerate", "scrust-gpu/accelerate"]
